--- a/shared/src/main/res/layout/page_account_intro.xml
+++ b/shared/src/main/res/layout/page_account_intro.xml
@@ -105,11 +105,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="12dp"
             android:layout_marginEnd="12dp"
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="20dp"
             android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingTop="6dp"
+            android:paddingBottom="6dp" >
 
             <de.hdodenhof.circleimageview.CircleImageView
                 app:civ_border_width="0dp"
@@ -135,7 +136,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                android:background="@drawable/ripple"
+                android:background="@drawable/pulse_ripple"
                 android:clickable="true"
                 android:padding="12dp"
                 android:text="@string/try_it"
