--- a/shared/src/main/res/values/preferences.xml
+++ b/shared/src/main/res/values/preferences.xml
@@ -103,6 +103,7 @@
     <string name="pref_notification_actions" translatable="false">notification_actions</string>
     <string name="pref_emoji_style" translatable="false">emoji_style</string>
     <string name="pref_phone_number" translatable="false">phone_number</string>
+    <string name="pref_keyboard_layout" translatable="false">keyboard_layout</string>
 
     <string name="pref_quick_compose_category" translatable="false">quick_compose_category</string>
     <string name="pref_quick_compose" translatable="false">quick_compose</string>
@@ -112,7 +113,7 @@
     <string name="pref_delayed_sending" translatable="false">delayed_sending</string>
     <string name="pref_cleanup_messages" translatable="false">cleanup_old_messages</string>
     <string name="pref_signature" translatable="false">signature</string>
-    <string name="pref_keyboard_layout" translatable="false">keyboard_layout</string>
+    <string name="pref_message_backup" translatable="false">message_backup</string>
 
     <string name="pref_mms_configuration" translatable="false">mms_configuration</string>
     <string name="pref_mms_size" translatable="false">mms_size_limit</string>
