--- a/shared/src/main/res/xml/settings_features.xml
+++ b/shared/src/main/res/xml/settings_features.xml
@@ -32,6 +32,10 @@
         android:summary="@string/internal_browser_summary"
         android:defaultValue="true" />
 
+    <Preference
+        android:key="@string/pref_message_backup"
+        android:title="@string/message_backup" />
+
     <xyz.klinker.messenger.shared.view.MaterialPreferenceCategory
         android:key="@string/pref_quick_compose_category"
         android:title="@string/quick_compose">
