store whether the user has purchased an account or not, on the device, in case they don't set it up right away and Google refuses to restore the purchase

--- a/api_implementation/src/main/res/values/account_values.xml
+++ b/api_implementation/src/main/res/values/account_values.xml
@@ -10,4 +10,5 @@
     <string name="api_pref_subscription_expiration" translatable="false">subscription_expiration</string>
     <string name="api_pref_device_id" translatable="false">device_id</string>
     <string name="api_pref_key" translatable="false">key</string>
+    <string name="api_pref_has_purchased" translatable="false">has_purchased_an_account_on_device</string>
 </resources>
