update version number

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -31,6 +31,12 @@
     <!--</version>-->
 
     <version
+        name="2.7.5"
+        description="January 9th, 2017">
+        <text>Bug fixes</text>
+    </version>
+
+    <version
         name="2.7.4"
         description="January 2nd, 2017">
         <text>Increase the "undo" duration for archiving and deleting messages</text>
