--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -31,6 +31,13 @@
     <!--</version>-->
 
     <version
+        name="2.7.6"
+        description="January 15th, 2017">
+        <text>Notification channel simplification</text>
+        <text>Bug fixes</text>
+    </version>
+
+    <version
         name="2.7.5"
         description="January 9th, 2017">
         <text>Bug fixes</text>
