--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -31,6 +31,12 @@
     <!--</version>-->
 
     <version
+        name="2.7.7"
+        description="January 15th, 2017">
+        <text>Hotfix to fix crashes</text>
+    </version>
+
+    <version
         name="2.7.6"
         description="January 15th, 2017">
         <text>Notification channel simplification</text>
