--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -22,13 +22,14 @@
         <!--<text>Adjust the widget theme to match the dark or black theme in the app (TODO: remove the feature flag)</text>-->
     <!--</version>-->
 
-    <!--<version-->
-        <!--name="2.8.0"-->
-        <!--description="December 12th, 2017">-->
-        <!--<text>Access and create templates from the "Attach" menu, when writing messages (TODO: remove the feature flag)</text>-->
-        <!--<text>Select from a list of all contacts on the compose screen (TODO: uncomment on bottom_bar_compose and ComposeContactsProvider)</text>-->
-        <!--<text>Added the ability to mute a conversation, from it's notification (TODO: uncomment mute title on arrays.xml)</text>-->
-    <!--</version>-->
+    <version
+        name="2.8.0"
+        description="January 25th, 2017">
+        <text>Access and create templates from the "Attach" menu, when writing messages</text>
+        <text>Select from a list of all contacts on the compose screen</text>
+        <text>Added the ability to mute a conversation, from it's notification</text>
+        <text>Android 8.1: Add an option to use the white navigation bar with the light theme, for those that don't care about design and want to burn their eyes.</text>
+    </version>
 
     <version
         name="2.7.7"
