--- a/shared/src/main/res/layout/fragment_media_grid.xml
+++ b/shared/src/main/res/layout/fragment_media_grid.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
+    <com.afollestad.dragselectrecyclerview.DragSelectRecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/recycler_view"
