--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -18,8 +18,10 @@
 
     <!--<version-->
         <!--name="2.9.0"-->
-        <!--description="December 12th, 2017">-->
+        <!--description="January 19th, 2017">-->
         <!--<text>Adjust the widget theme to match the dark or black theme in the app (TODO: remove the feature flag)</text>-->
+        <!--<text>Long click (and drag) to select and delete images on the "View Media" page within a conversation (TODO: remove the feature flag)</text>-->
+        <!--<text>Share multiple selected messages at once, instead of forcing you to share them individually (TODO: remove the feature flag)</text>-->
     <!--</version>-->
 
     <version
