up the max amount of images to download from the cloud

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -30,7 +30,7 @@
         <text>Access and create templates from the "Attach" menu, when writing messages</text>
         <text>Select from a list of all contacts on the compose screen</text>
         <text>Added the ability to mute a conversation, from it's notification</text>
-        <text>Android 8.1: Add an option to use the white navigation bar with the light theme, for those that don't care about design and want to burn their eyes.</text>
+        <text>Android 8.1: Add an option to use the white navigation bar with the light theme, for those that just want to burn their eyes out...</text>
     </version>
 
     <version
