--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -31,6 +31,7 @@
         <text>Select from a list of all contacts on the compose screen</text>
         <text>Added the ability to mute a conversation, from it's notification</text>
         <text>Android 8.1: Add an option to use the white navigation bar with the light theme, for those that just want to burn their eyes out...</text>
+        <text>Bug fixes</text>
     </version>
 
     <version
