implementation for sending auto reply messages for vacation mode, driving mode, contact matching, and keyword matching

--- a/shared/src/main/res/values/preferences.xml
+++ b/shared/src/main/res/values/preferences.xml
@@ -82,6 +82,7 @@
     <string name="pref_ringtone" translatable="false">ringtone</string>
     <string name="pref_base_theme" translatable="false">base_theme</string>
     <string name="pref_adjustable_nav_bar" translatable="false">adjustable_nav_bar</string>
+    <string name="pref_driving_mode" translatable="false">driving_mode</string>
     <string name="pref_rounder_bubbles" translatable="false">rounder_bubbles</string>
     <string name="pref_swipe_delete" translatable="false">swipe_delete</string>
     <string name="pref_global_color_theme" translatable="false">global_color_theme</string>
