--- a/shared/src/main/res/values/preferences.xml
+++ b/shared/src/main/res/values/preferences.xml
@@ -82,7 +82,6 @@
     <string name="pref_ringtone" translatable="false">ringtone</string>
     <string name="pref_base_theme" translatable="false">base_theme</string>
     <string name="pref_adjustable_nav_bar" translatable="false">adjustable_nav_bar</string>
-    <string name="pref_driving_mode" translatable="false">driving_mode</string>
     <string name="pref_rounder_bubbles" translatable="false">rounder_bubbles</string>
     <string name="pref_swipe_delete" translatable="false">swipe_delete</string>
     <string name="pref_global_color_theme" translatable="false">global_color_theme</string>
@@ -116,6 +115,7 @@
     <string name="pref_cleanup_messages_now" translatable="false">cleanup_old_messages_now</string>
     <string name="pref_signature" translatable="false">signature</string>
     <string name="pref_message_backup" translatable="false">message_backup</string>
+    <string name="pref_auto_reply" translatable="false">auto_reply</string>
 
     <string name="pref_mms_configuration" translatable="false">mms_configuration</string>
     <string name="pref_mms_size" translatable="false">mms_size_limit</string>
@@ -130,5 +130,14 @@
     <string name="pref_user_agent" translatable="false">user_agent</string>
     <string name="pref_user_agent_profile_url" translatable="false">user_agent_profile_url</string>
     <string name="pref_user_agent_profile_tag" translatable="false">user_agent_profile_tag_name</string>
+
+    <string name="pref_driving_mode_group" translatable="false">driving_mode_group</string>
+    <string name="pref_driving_mode" translatable="false">driving_mode</string>
+    <string name="pref_driving_mode_editable" translatable="false">driving_mode_edit</string>
+    <string name="pref_vacation_mode_group" translatable="false">vacation_mode_group</string>
+    <string name="pref_vacation_mode" translatable="false">vacation_mode</string>
+    <string name="pref_vacation_mode_editable" translatable="false">vacation_mode_edit</string>
+    <string name="pref_auto_replies_group" translatable="false">auto_replies_group</string>
+    <string name="pref_create_auto_reply" translatable="false">create_auto_reply</string>
 
 </resources>
