--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -33,6 +33,8 @@
     <version
         name="2.8.2"
         description="February 5th, 2018">
+        <!-- setup for auto reply system -->
+        <!-- changes to the media parsers to run on messages inserted -->
         <text>Option within a conversation's settings menu to delete old messages out of that conversation, based on a time interval</text>
         <text>Settings cleanup</text>
         <text>Bug fixes</text>
