refactor the media parsers to accept message objects, rather than just text

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -36,6 +36,7 @@
         <!-- setup for auto reply system -->
         <!-- changes to the media parsers to run on messages inserted -->
         <text>Option within a conversation's settings menu to delete old messages out of that conversation, based on a time interval</text>
+        <text>Preview sent web articles (not just received)</text>
         <text>Settings cleanup</text>
         <text>Bug fixes</text>
     </version>
