fix some issues with the quick compose screen

--- a/shared/src/main/res/layout/activity_compose.xml
+++ b/shared/src/main/res/layout/activity_compose.xml
@@ -53,7 +53,8 @@
                 android:gravity="start"
                 android:hint="@string/enter_contact_name"
                 android:textColor="@android:color/white"
-                android:textColorHint="@color/toolbarEditTextHint" />
+                android:textColorHint="@color/toolbarEditTextHint"
+                android:imeOptions="flagNoExtractUi" />
 
         </xyz.klinker.messenger.shared.view.MaxHeightScrollView>
 
